# ai_engineer_portfolio

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: config.yaml
docs/: Architecture.md  DEPLOYMENT.md  USER_GUIDE.md
src/: __init__.py  chat_manager.py  document_processor.py  rag_chain.py  utils.py  vector_store.py
